--- a/client/views/posts/post_item.html
+++ b/client/views/posts/post_item.html
@@ -6,7 +6,7 @@
       	<a href="{{url}}">{{title}}</a>
       	<span>{{domain}}</span>
       </h3>
-
+      <a href="#" class="delete btn btn-danger pull-right">remove</a>
     </div>
   </div>
 </template>
