--- a/client/views/posts/posts_list.html
+++ b/client/views/posts/posts_list.html
@@ -1,7 +1,11 @@
 <template name="postsList">
   <div class="posts">
-    {{#each posts}}
-      {{> postItem}}
-    {{/each}}
+   {{#if count_post}}
+	    {{#each posts}}
+	      {{> postItem}}
+	    {{/each}}
+   {{else}}
+   		<div class="alert alert-info">Post not found!</div>
+   {{/if}}
   </div>
 </template>
